# dirty_rust

./: .gitignore  .travis.yml  Cargo.toml  Justfile  LICENSE  README.md  TODO  build.rs  space  test.lua
.github/workflows/: check.yml  ci.yml  dirty.yml  rust.yml
doc/: dist.md  render.md  shader.md
examples/: 3d.rs  Cargo.toml  ant.rs  app.lua  app.rs  audio.rs  basic.rs  bench.rs  canvas.rs  col.rs  conf.rs  cow.rs  cube.rs  data.rs  dirt.rs  displace.rs  dither.rs  donut.mtl  ecs.rs  effect.rs  empty.rs  fs.lua  geom.rs  headless.rs  http.lua  http.rs  img.lua  imgui.rs  input.rs  ketos.rs  kit.rs  light.rs  lua.rs  main.ket  main.lua  mask.rs  model.rs  mviewer.rs  net.rs  noise.rs  (+26 more)
examples/assets/: noise.frag  test.frag
examples/ecs/: body.rs  debug_sys.rs  debug_system.rs  ecs.rs  flower.rs  main.rs  move_sys.rs  move_system.rs  petal.rs  powder.rs  render_sys.rs  render_system.rs  sprite.rs  trans.rs  vel.rs
examples/lua/: main.rs  test.lua
examples/res/: blur.frag  bojack.mtl  btfly.glb  cube.glb  displace.frag  filter.frag  flower.mtl  fog.frag  grayscale.frag  index.html  invert.frag  kart.mtl  light.frag  lighting.frag  noise.frag  normal.frag  outline.frag  pix.frag  plant.mtl  pulse.frag  rainbow.frag  sand.frag  test.frag  test1.frag  test2.frag  tunnel.frag  twist.frag  uniform_tex.frag  vhs.frag
examples/specs/: anim_sys.rs  body.rs  collide_sys.rs  debug_sys.rs  flower.rs  main.rs  move_sys.rs  petal.rs  petal_follow_sys.rs  render_sys.rs  sprite.rs  trans.rs  vel.rs
examples/src/: main.rs
examples/web/: index.html
extras/: Justfile  mac.plist
misc/: build_examples.py  doc.css  example.html  icon.ase  logo.ase
site/: .gitignore  examples.html  index.html  now.json  vercel.json
site/examples/: audio.html  audio.js  audio_bg.wasm  raw.html  raw.js  raw_bg.wasm  sprite.html  sprite.js  sprite_bg.wasm  triangle.html
site/lib/: highlight.min.js
site/scripts/: err.js  example.js  examples.js  home.js  main.js
site/styles/: example.css  global.css
src/: app.rs  ase.rs  assets.rs  audio.rs  batch.rs  camera.rs  canvas.rs  car.json  clip.rs  col.rs  conf.rs  ctx.rs  data.rs  desc.rs  ecs.rs  err.rs  font.rs  fps.rs  fs.rs  geom.rs  gfx.rs  helpers.rs  http.rs  img.rs  imgui.rs  input.rs  json.rs  ketos.rs  lib.rs  lua.rs  main.rs  math.rs  mesh.rs  midi.rs  model.rs  native.rs  physics.rs  quad.frag  quad.vert  res.rs  (+13 more)
src/addons/: Cargo.toml  col.rs  ecs.rs  lua.rs  mod.rs  res.rs
src/app/: audio.rs  camera.rs  canvas.rs  conf.rs  desc.rs  err.rs  font.rs  g2d.rs  gfx.rs  gl.rs  imgui.rs  imgui_renderer.rs  input.rs  mesh.rs  mod.rs  model.rs  mtl.rs  res.rs  shader.rs  shapes.rs  skybox.rs  state.rs  test.frag  test.vert  texture.rs  transform.rs  window.rs
src/audio/: buffer.rs  converter.rs  decoder.rs  dummy.rs  effect.rs  mixer.rs  mod.rs  mp3.rs  mp3_old.rs  native.rs  native2.rs  resample.rs  sound.rs  source.rs  spatial.rs  synth.rs  track.rs  types.rs  utils.rs  vorbis.rs  wav.rs  web.rs
src/backends/: gl.rs  mod.rs
src/bindings/: ketos.rs  lua.rs  mod.rs  python.rs
src/cli/: mod.rs
src/codec/: bin.rs  json.rs  mod.rs
src/ecs/: mod.rs
src/engine/: Cargo.toml
src/geom/: col.rs  delaunay.rs  meshgen.rs  mod.rs  ops.rs  types.rs
src/gfx/: batch.rs  buffer.rs  camera.rs  canvas.rs  desc.rs  font.rs  gltypes.rs  handles.rs  ibuf.rs  mesh.rs  mod.rs  model.rs  pipeline.rs  renderer.rs  shader.rs  texture.rs  transform.rs  types.rs  uniform.rs  vbuf.rs
src/ggl/: mod.rs
src/gl/: attr.rs  batch.rs  batched_renderer.rs  fbuf.rs  ibuf.rs  mesh.rs  mod.rs  pipeline.rs  program.rs  renderer.rs  shape.rs  stencil.rs  texture.rs  types.rs  uniform.rs  vao.rs  vbuf.rs
src/http/: body.rs  client.rs  mod.rs  req.rs  res.rs  router.rs  server.rs  types.rs
src/kit/: anim.rs  area.rs  ec.rs  ecs.rs  geom.rs  input.rs  mod.rs  particle.rs  prof.rs  sprite.rs  state.rs  textedit.rs  textinput.rs  timer.rs
src/lib/: Cargo.toml
src/lua/: Cargo.toml
src/math/: dir.rs  geom.rs  lerp.rs  map.rs  mat.rs  mod.rs  noise.rs  rand.rs  vec.rs
src/modules/: ansi.rs  app.rs  ase.rs  audio.rs  col.rs  data.rs  err.rs  fs.rs  g2d.rs  g3d.rs  gfx.rs  http.rs  img.rs  input.rs  joystick.rs  lua.rs  mod.rs  net.rs  pref.rs  res.rs  term.rs  window.rs
src/net/: mod.rs
src/physics/: mod.rs
src/res/: 2d_default.frag  2d_default.vert  2d_default_330.frag  2d_default_330.vert  2d_template.frag  2d_template.vert  2d_template_330.frag  2d_template_330.vert  3d.frag  3d.vert  3d_default.frag  3d_default.vert  3d_default_330.frag  3d_default_330.vert  3d_template.frag  3d_template.vert  3d_template_330.frag  3d_template_330.vert  cubemap.frag  cubemap.vert  cubemap_330.frag  cubemap_330.vert  default_font.rs  default_shader.rs  mod.rs  quad.frag  quad.vert  quad_template.frag  resources.rs  test.frag  test.vert
src/shaders/: cubemap.frag  default.frag  quad.frag  quad.vert  template.frag  template.vert
src/shapes/: canvas.rs  checkerboard.rs  circle.rs  cube.rs  curve.rs  gradient.rs  line.rs  line3d.rs  mod.rs  model.rs  plane.rs  polygon.rs  quad.rs  raw.rs  raw2d.rs  raw3d.rs  (+7 more)
(+186 files in other folders)
