# wengwengweng

[package]
name = "dirty"
description = "dirty tool kit"
version = "0.0.0"
authors = ["tga <tga@enemyspy.xyz>"]
repository = "https://git.sr.ht/~slmjkdbtl/DIRTY"
homepage = "http://tool.enemyspy.xyz"
license = "Zlib"
edition = "2018"
readme = "README.md"
exclude = [
	"/misc",
	"/site",
]

[profile.dev.package."*"]
opt-level = 2

[features]
default = [
# 	"midi",
]

midi = [
	"midir",
]

[dependencies]
once_cell = "1.2"
instant = { version = "0.1", features = [ "wasm-bindgen", ] }
serde = { version = "1.0", features = [ "derive", ] }
serde_json = "1.0"

# fs
glob = "0.3"

# data
dirs-next = "1.0"

# app
glow = "0.4"
fontdue = "0.0"
image = { version = "0.23", default-features = false, features = [ "png", "jpeg", "tga", "bmp", ] }
tobj = "2.0"
gltf = "0.15"

# audio
cpal = "0.11"
puremp3 = "0.1"
lewton = "0.10"
hound = "3.4"
sfxr = "0.1"

# midi
midir = { version = "0.6", optional = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
glutin = "0.24"
gilrs = "0.7"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
	"console",
	"Blob",
	"Url",
	"Document",
	"Node",
	"Window",
	"Element",
	"Storage",
	"HtmlElement",
	"HtmlCanvasElement",
	"HtmlAudioElement",
	"WebGlContextAttributes",
	"WebGl2RenderingContext",
	"MouseEvent",
	"KeyboardEvent",
	"WheelEvent",
	"AudioContext",
	"AudioBufferSourceNode",
	"AudioBuffer",
	"AudioDestinationNode",
]

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.7"

