# wengwengweng

[package]
name = "dirty"
description = "dirty tool kit"
version = "0.0.0"
authors = ["tga <tga@enemyspy.xyz>"]
repository = "https://git.sr.ht/~slmjkdbtl/DIRTY"
homepage = "http://dirty.enemyspy.xyz"
license = "Zlib"
edition = "2018"
readme = "README.md"
exclude = [
	"/misc",
	"/site",
]

[features]
midi = [
	"midir",
]

imgui = [
	"libimgui",
]

[dependencies]
once_cell = "1.2"
instant = { version = "0.1", features = [ "wasm-bindgen", ] }
serde = { version = "1.0", features = [ "derive", ] }
serde_json = "1.0"
bincode = "1.3"
glob = "0.3"
dirs-next = "1.0"
glow = "0.5"
# TODO: wait til new fontdue support wasm
fontdue = "0.0"
image = { version = "0.23", default-features = false, features = [ "png", "jpeg", "tga", "bmp", ] }
tobj = "2.0"
gltf = "0.15"
puremp3 = "0.1"
lewton = "0.10"
hound = "3.4"
sfxr = "0.1"
midir = { version = "0.6", optional = true }
cpal = "0.11"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
# TODO: 0.24 event lag bug
glutin = "0.24"
# glutin = "0.21"
# sdl2 = { version = "0.34", features = [ "bundled", ] }
gilrs = "0.7"
# TODO: support wasm
libimgui = { version = "0.4", optional = true, package = "imgui" }

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
	"console",
	"Blob",
	"Url",
	"Document",
	"Node",
	"Window",
	"Element",
	"Storage",
	"HtmlElement",
	"HtmlCanvasElement",
	"HtmlAudioElement",
	"WebGlContextAttributes",
	"WebGl2RenderingContext",
	"MouseEvent",
	"KeyboardEvent",
	"WheelEvent",
	"AudioContext",
	"AudioBufferSourceNode",
	"AudioBuffer",
	"AudioDestinationNode",
]

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.9"

